--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <tr>
                 <td>GitHub</td>
                 <td>:</td>
-                <td> <a href="https://github.com/VEERAMANI">GitHub</a></td>
+                <td> <a href="https://github.com/Manijilla">https://github.com/Manijilla</a></td>
             </tr>
         </table>
     </section>
